--- a/src/assets/Disciplinas.css
+++ b/src/assets/Disciplinas.css
@@ -1,4 +1,16 @@
-#disciplina .disciplina {
+/*RESET CSS*/
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/*BODY*/
+body {
+    background-color: rgb(27, 26, 26) !important;
+}
+
+/*DISCIPLINAS*/
+#disciplinas .disciplina {
     position: relative;
     width: calc(100% - 40px);
     margin: 0 auto;
@@ -6,53 +18,63 @@
     overflow: hidden;
     margin-top: 20px;
     margin-bottom: 20px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-#disciplina .capa {
+#disciplinas .disciplina::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* escurece a imagem */
+    z-index: 1;
+}
+
+#disciplinas .capa {
     position: relative;
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
-#disciplina .imagem-fundo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-}
-
-#disciplina .conteudo {
+#disciplinas .conteudo {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    color: white;
+    z-index: 3;
 }
 
-#disciplina .foto-professor {
-    width: 100px; 
-    height: 100px; 
+#disciplinas .fotoUsuario {
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     margin-bottom: 20px;
 }
 
-#disciplina .acessar-disciplina {
+#disciplinas .acessar-disciplina {
     display: block;
     min-width: 200px;
     max-width: 300px;
     padding: 10px;
     margin: 20px auto;
     text-align: center;
-    background-color: #007bff; 
+    background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
 }
 
-#disciplina .acessar-disciplina:hover {
+#disciplinas .acessar-disciplina:hover {
     background-color: #0056b3;
 }
 
-#disciplinas h2{
-    color:white;
+#disciplinas h2 {
+    color: white;
 }
