--- a/src/assets/CardItemG.css
+++ b/src/assets/CardItemG.css
@@ -1,53 +1,36 @@
-/*GERAL*/
-
-*{
-    margin: 0;
-    padding: 0;
-}
-  
-body{
-    background-color: rgb(27, 27, 27) !important;
-}
-  
-/*---------------------------*/
-
-h1{
-    font-size: 30px !important;
-}
-  
 /*Media query para ajustamento das imagens em telas de 990px ou menos de largura */
 @media only screen and (max-width: 991px){
-    #MaisAcessados .card{
+    #CardsListG .card{
         margin-bottom: 20px !important;
     }
 }
 
 /*Mais acessados*/
-#MaisAcessados .card-text{
+#CardsListG .card-text{
     color: black !important;
 }
 
 /*LIVROS RECOMENDADOS*/
-#MaisAcessados .card{
+#CardsListG .card{
     background-color: #fff !important;
     border: 3px solid #623CEA !important;  
     width: 18rem !important;
     padding: 15px !important;
 }
 
-#MaisAcessados .card a{
+#CardsListG .card a{
     background-color: #623CEA !important;
 }
 
 
-#MaisAcessados .card-img-size{
+#CardsListG .card-img-size{
     height: 200px;
     object-fit: cover;
 }
 
 /*Media query para espaçamento dos cards para telas de 990px ou menos de largura */
 @media only screen and (max-width: 991px){
-    #MaisAcessados .card{
+    #CardsListG .card{
         margin-bottom: 20px !important;
     }
 }
