--- a/src/assets/Perfil.css
+++ b/src/assets/Perfil.css
@@ -15,11 +15,37 @@ h1,h2,p{
     color: white;
 }
 
-
+/*Linha divisora*/
 .divider {
     height: 2px; 
     background-color: white; 
     width: 100%;
 }
 
+#historico{
+    margin-bottom: 40px;
+}
 
+#historico h3{
+    color: white !important;
+}
+
+/*Espaçamento entre os cards*/
+#historico .card {
+    margin-right: 10px; 
+}
+
+/*Pequeno ajuste no título do livro*/
+#historico .card-body {
+    padding: 0.5rem; 
+}
+
+/*Mais ajustes no título do card*/
+#historico .card-title {
+    font-size: 1rem; 
+    margin-bottom: 0; 
+}
+
+#historico .card {
+    border: 3px solid #623CEA !important;
+}
