--- a/src/assets/CardItemP.css
+++ b/src/assets/CardItemP.css
@@ -12,3 +12,13 @@
     font-size: 1rem; 
     margin-bottom: 0; 
 }
+
+.card-item {
+height: 100%;
+}
+
+.card-item-img {
+height: 100%;
+width: auto; 
+object-fit: cover; 
+}
