--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,3 @@
-/*GERAL*/
-
 * {
     margin: 0;
     padding: 0;
@@ -9,9 +7,6 @@ body {
     background-color: rgb(27, 27, 27) !important;
 }
 
-/*---------------------------*/
-
-/*HEADER*/
 header {
     padding: 10px 20px;
     background-color: rgb(27, 26, 26) !important;
@@ -68,8 +63,7 @@ ul li a:hover {
     background-color: rgb(27, 26, 26);
 }
 
-/*Mudando o ícone do menu 'hamburguer'*/
+/*Icone para o dropdown menu*/
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
-
