--- a/client/src/components/SubjectInfo/SubjectInfo.css
+++ b/client/src/components/SubjectInfo/SubjectInfo.css
@@ -5,13 +5,13 @@
 .title h1 {
   display: flex;
   justify-content: center;
-  color: #623cea;
+  color: #ffbe0b;
   font-size: 2rem;
 }
 
 .subjectBooks ul {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr); /* Alinha a grid como no ShowBooks */
   gap: 20px;
   list-style: none;
   padding: 0;
@@ -19,21 +19,17 @@
 }
 
 .subjectBooks ul li {
-  background-color: #fff;
+  background-color: #623cea;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 15px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.subjectBooks ul li:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-align: center; /* Alinha o conteúdo ao centro */
 }
 
 .subjectBooks ul li img {
   width: 100%;
-  height: auto;
+  height: 80%;
   border-radius: 8px;
   object-fit: cover;
   margin-bottom: 10px;
@@ -41,30 +37,33 @@
 
 .subjectBooks ul li h2 {
   font-size: 1.2rem;
-  color: #333;
+  color: #f4f0f0;
   margin-bottom: 10px;
-}
-
-.subjectBooks ul li p {
-  font-size: 0.9rem;
-  color: #666;
-  margin-bottom: 10px;
+  white-space: nowrap; /* Impede a quebra de linha */
+  overflow: hidden; /* Garante que o conteúdo que ultrapassar o limite seja escondido */
+  text-overflow: ellipsis; /* Adiciona as reticências (...) */
 }
 
 .subjectBooks ul li a {
   font-size: 1rem;
   color: #fff;
   text-decoration: none;
-  background-color: #623cea;
-  padding: 8px 12px;
+  background-color: #ffbe0b;
+  padding: 3px 0px;
   border-radius: 4px;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   border: none;
   transition: background-color 0.3s ease;
 }
 
 .subjectBooks ul li a:hover {
-  background-color: #5129b8;
+  color: #fff;
+  background-color: #d19b07;
+}
+
+.subjectBooks ul li:hover {
+  transform: scale(1.05); /* Efeito de hover para aumentar o card */
 }
 
 /* Responsividade */
@@ -96,7 +95,6 @@
   }
 }
 
-
-.subjectBooks p{
+.subjectBooks p {
   color: #f4f0f0;
 }
